# dobyte_test

./: LICENSE  Makefile  README.md  pyproject.toml  setup.sh
data/raw/: data.json
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: basic_exploration.ipynb  run_multiple_strategies.ipynb
reports/: drawdown_stats.csv  drawdown_stats.md  equity_corr_head.md  equity_corr_matrix.csv  equity_final_stats.csv  equity_final_stats.md  portfolio_efficiency_stats.csv  portfolio_efficiency_stats.md  returns_stats.csv  sharpe_stats.csv  sharpe_stats.md
src/: cli.py
src/alphas/: alpha.py  backtest.py  performance.py
src/data/: make_dataset.py
